--- a/biodata.html
+++ b/biodata.html
@@ -27,6 +27,7 @@
     <p>
         <a href="https://instagram.com/lusy.rhm?igshid=YmMyMTA2M2Y=">Instagram</a>
         <a href="https://unej.id/LinkedinLusy">Linkedln</a>
+        <a href="file:///D:/IF%20SEMESTER%205/PWEB/portofolio.html">Portofolio</a>
     </p>
 </body>
 </html>
